k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: self-hosted-docker-registry
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
      - $(INGRESS_HOSTNAME)
      secretName: self-hosted-docker-registry-tls
  rules:
  - host: $(INGRESS_HOSTNAME)
    http:
      paths:
      - pathType: Prefix
        path: "/auth"
        backend:
          service:
            name: auth-endpoint
            port: 
              number: 80
  - host: $(INGRESS_HOSTNAME)
    http:
      paths:
      - pathType: Prefix
        path: "/v2"
        backend:
          service:
            name: auth-endpoint
            port: 
              number: 80
